create directory added

--- a/dreambooth_runpod_custom.ipynb
+++ b/dreambooth_runpod_custom.ipynb
@@ -37,6 +37,7 @@
    "source": [
     "from IPython.display import clear_output\n",
     "from IPython.utils import io\n",
+    "import os\n",
     "\n",
     "print(\"Installing widgets library...\")\n",
     "with io.capture_output() as captured:\n",
@@ -86,6 +87,15 @@
     "\n",
     "    progress_bar.close()\n",
     "    print(\"✅ All Dependencies successfully installed.  Proceed to model download.\")\n",
+    "\n",
+    "    from shutil import rmtree\n",
+    "    path = \"./training_images\"\n",
+    "    if os.path.exists(path):\n",
+    "        # remove existing images\n",
+    "        rmtree(path)\n",
+    "\n",
+    "        # Create the training images directory\n",
+    "        os.mkdir(path)\n",
     "\n",
     "except:\n",
     "    progress_bar.close()\n",
